libs/@local/codegen/tests/standalone-types/snapshots/standalone_types__EnumUntagged-Typescript.snap
---
source: libs/@local/codegen/tests/standalone-types/main.rs
expression: generated
---
export type EnumUntagged = null | [] | number | [boolean, string] | Record<string, never> | {
	value: number;
} | {
	value_1: number;
	value_2: string;
} | {
	name: string;
} & StructSimple;
