libs/@local/codegen/tests/standalone-types/snapshots/standalone_types__EnumWithSkippedVariants::Typescript.snap
---
source: libs/@local/codegen/tests/standalone-types/main.rs
expression: generated
---
export type EnumWithSkippedVariants = null;
